Tests/Fail/TestRecordUpdate003.ML
PolyML.Compiler.languageExtensions := true;

(* Can't find a fixed record type *)
fun setA r x = {r where a = x};
